--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <title>Abrar Junaed</title>
   </head>
   <body>
     <div id="root"></div>
